<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".result.NotFormattableFragment">

  <com.google.android.material.chip.ChipGroup
      android:id="@+id/cg_filters"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/app_default_spacing_from_layout_outline"
      android:paddingStart="@dimen/app_default_spacing_from_layout_outline"
      app:chipSpacingVertical="0dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_parsing_error"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/not_formattable_parsing_error_text" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_short_number"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/not_formattable_short_number_text" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_already_e164"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/not_formattable_already_e164_text" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_invalid_number"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/not_formattable_invalid_number_text" />

  </com.google.android.material.chip.ChipGroup>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_view"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:scrollbars="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cg_filters" />

</androidx.constraintlayout.widget.ConstraintLayout>
